--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "webview-simple",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
     "start": "electron ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "electron": "^9.0.5"
   }
 }
